--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://darxzn.github.io/password-generator",
   "name": "05passwordgenerator",
   "private": true,
   "version": "0.0.0",
